--- a/configs/train_configs.yaml
+++ b/configs/train_configs.yaml
@@ -17,10 +17,15 @@ warmup_ratio: 0.03
 
 lora_config:
   r: 8
-  lora_alpha: 32
+  lora_alpha: 16
   lora_dropout: 0.05
-  bias: none
-  task_type: CAUSAL_LM
+  bias: "none"
+  task_type: "CAUSAL_LM"
+  target_modules:
+    - c_attn
+    - c_proj
+    - w1
+    - w2
 
 data:
   train_file: ./data/train.jsonl
